--- a/wp-content/themes/wp-starter/template-parts/blocks/advisory-board.twig
+++ b/wp-content/themes/wp-starter/template-parts/blocks/advisory-board.twig
@@ -28,7 +28,7 @@
 							</div>
 						{% endfor %}
 					</div>
-					<div class="js-members-carousel-pagination hs-pagination"></div>
+					<div class="js-members-carousel-pagination eea-pagination"></div>
 				</div>
 			</div>
 			<div class="hidden grid-cols-2 gap-4 xl:grid lg:mt-16">
